# HApps-Store

./: .gitignore  .hcignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bridge_specs.json  conductor-config.toml  container-config.toml  default.nix  holochain.ts  keystore.key  manifest.json  package-lock.json  package.json  shell.nix  test-create-app-query.json  todo.md  tsconfig.json  types.ts
.circleci/: config.yml
.circlei/: config.yml
@types/hchc/: index.d.ts
config/: paths.js
dna-src/: .hcignore  Cargo.toml  app.json  config.nix  dna.json  manifest.json  tsconfig.json
dna-src/anchors/: anchors.ts
dna-src/bridge_replies/: bridge_replies.ts
dna-src/bridge_request/: bridge_request.ts
dna-src/categories/: index.ts
dna-src/comments/: comments.json  comments.ts
dna-src/common/utils/: Cargo.toml
dna-src/common/utils/src/: lib.rs
dna-src/happs/: happs.ts
dna-src/hchc/: dna_app_code.json  hchc.ts
dna-src/install/: default.nix
dna-src/ratings/: ratings.json  ratings.ts
dna-src/tag/: tag.ts
dna-src/test/: index.js  package-lock.json  package.json
dna-src/test/e2e/: default.nix
dna-src/test/multi_agent_tests/: upvote_test.js
dna-src/test/single_agent_tests/: categories_test.js  happs_test.js  ratings_test.js  whoami_test.js
dna-src/test/unit/: default.nix
dna-src/test/unit_test/: anchor_test.js  categories_test.js  happs_test.js  ratings_test.js  whoami_test.js
dna-src/testZome/: index.ts
dna-src/whoami/: whoami.ts
dna-src/zomes/anchors/: zome.json
dna-src/zomes/anchors/code/: Cargo.toml
dna-src/zomes/categories/code/: Cargo.toml
dna-src/zomes/happs/code/: .hcbuild  Cargo.toml
dna-src/zomes/happs/code/src/: entry.rs  happs_fn.rs  lib.rs
dna-src/zomes/happs/code/src/categories/: handlers.rs  mod.rs
dna-src/zomes/happs/code/src/happs/: handlers.rs  mod.rs
dna-src/zomes/happs/code/src/ratings/: handlers.rs  mod.rs
dna-src/zomes/ratings/: zome.json
dna-src/zomes/ratings/code/: .build  Cargo.toml
dna-src/zomes/ratings/code/src/: entry.rs  lib.rs  ratings_fn.rs
dna-src/zomes/whoami/code/: .hcbuild  Cargo.toml
dna-src/zomes/whoami/code/src/: lib.rs  whoami_fn.rs
hApp-store/: .hcignore  Cargo.toml  manifest.json
hApp-store/test/: config.js  index.js  package-lock.json  package.json
hApp-store/test/multi_agent_tests/: upvote_test.js
hApp-store/test/single_agent_tests/: categories_test.js  happs_test.js  whoami_test.js
hApp-store/zomes/happs/: zome.json
hApp-store/zomes/happs/code/: .hcbuild  Cargo.toml
hApp-store/zomes/whoami/code/: Cargo.toml  target
test/: categories_test.json  comments_test.json  config.js  hchc_app_ui_test.json  hchc_getApp.json  hchc_test.json  index.js  ratings_test.json
test/multi_agent_tests/: upvote_test.js
test/single_agent_tests/: categories_test.js  happs_test.js  whoami_test.js
test/temp/: anchor_test.json  tag_test.json
test/unit_test/: ratings_test.json
tmp-storage/cas/: AgentState.txt  QmRmLmLRwADc973SSmGsHdPciHHx2LTGnETNVEyzJqGsbn.txt  QmTaJeLZWqg2Gr2epfUJbwtYUoAR9zJx2MSRTqugq8QYHv.txt  Qmb6Yk1Ede5WG3NYqEuvjiUec5EUoFPNHq4AoREeddEP2e.txt  Qmc5GGdWmR9Q539VCxa9CtJamiWpxPCTKUNA6hCeSJSkaT.txt
tmp-storage/eav/a/crud-status/: QmNYMXZQjzyX2Ykshh6ZCcXLxznTybZeqbehLBBoMEvho2
tmp-storage/eav/e/QmVheyeRzufvW9HeAX2uthjHok3j4hynPscpXcshDdj8vy/: QmWtpdcZ7su7dqjFnrQq3HRE6vN5EgWmEeNZdE7cfMb8pg
ui-src/public/: index.html
ui-src/src/: App.tsx  actions.ts  index.css  index.tsx  reducer.ts  store.tsx  utils.ts
ui-src/src/components/: AppCard.tsx  CreateReviewForm.css  CreateReviewForm.tsx  DownloadApp.tsx  MainNav.css  MainNav.tsx  Nav.css  Nav.tsx  ReviewList.css  ReviewList.tsx  SearchBar.tsx  SplashNav.css  SplashNav.tsx
ui-src/src/pages/: AllAppsPage.css  AllAppsPage.tsx  AllCategoriesPage.css  AllCategoriesPage.tsx  CategoryPage.css  CategoryPage.tsx  DetailPage.css  DetailPage.tsx  NewApp.tsx  NoMatch.tsx  Profile.tsx  ReferencePage.tsx  SplashScreen.css  SplashScreen.tsx  UploadNewApp.css  UploadNewApp.tsx  style.css
ui-src/src/types/: app.ts
zomes/happs/: zome.json
zomes/happs/code/: .hcbuild  Cargo.toml
zomes/whoami/code/: Cargo.toml
(+10 files in other folders)
