[package]
workspace = "../../.."
name = "whoami"
version = "0.6.0"
authors = [
  "Willem Olding <willem.olding@holo.host>",
  "Zo-El <joel.ulahanna@holo.host>",
  "Lisa Jetton <lisa.jetton@holo.host>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
syn = "=0.15.31"
hdk = { path = "../../../holochain-rust/crates/hdk" }
holochain_json_derive = "=0.0.23"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
