[package]
name = "happs"
version = "0.2.1-alpha1"
authors = [
  "Willem Olding <willem.olding@holo.host>",
  "Zo-El <joel.ulahanna@holo.host>",
  "Lisa Jetton <lisa.jetton@holo.host>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
syn = "=0.15.31"
hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.18-alpha1" }
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.18-alpha1" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
