[package]
name = "ratings"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail.com>", "Willem Olding <willem.olding@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
boolinator = "2.4"
utils = { path = "../../../common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
