[package]
name = "whoami"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail.com>", "Willem Olding <willem.olding@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.12-alpha1" }
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.12-alpha1" }


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
