[package]
name = "whoami"
version = "0.2.2-alpha1"
authors = [
  "Willem Olding <willem.olding@holo.host>",
  "Zo-El <joel.ulahanna@holo.host>",
  "Lisa Jetton <lisa.jetton@holo.host>"
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
syn = "=0.15.31"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.24-alpha2"}
holochain_json_derive = "=0.0.15"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
